--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "singleQuote": false,
     "semi": true
   },
+  "engines": {
+    "node": ">=12"
+  },
   "eslintConfig": {
     "root": true,
     "env": {
