--- a/package.json
+++ b/package.json
@@ -18,16 +18,19 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^2.6.12",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "highlight.js": "^10.4.1",
     "https-proxy-agent": "^5.0.0",
+    "js-cookie": "^2.2.1",
     "jwks-rsa": "^2.0.2",
     "morgan": "^1.10.0",
     "npm-run-all": "^4.1.5",
     "vue": "^2.6.12",
     "vue-router": "^3.4.9",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "*"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.1",
