--- a/auth_config.json
+++ b/auth_config.json
@@ -1,5 +1,6 @@
 {
   "domain": "dev-2h53iakd.eu.auth0.com",
   "clientId": "E8oSHFMeu6VIljxMBLEXRK3cpHEXjChB",
-  "audience": "http://localhost:3001/api/external"
+  "audience": "http://localhost:3001/api/external",
+  "serverUrl": "http://localhost:3001"
 }
