--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "dev": "npm-run-all --parallel serve api",
-    "api": "nodemon server.js"
+    "api": "nodemon server.js",
+    "api_start": "node server.js",
+    "start": "npm-run-all --parallel serve api_start"
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.13.5",
