--- a/package.json
+++ b/package.json
@@ -45,12 +45,16 @@
     "@vue/eslint-config-prettier": "^3.0.5",
     "babel-eslint": "^10.1.0",
     "node-sass": "^4.14.1",
+    "npm-run-all": "^4.1.5",
     "sass-loader": "^7.3.1",
     "vue-template-compiler": "^2.6.12"
   },
   "prettier": {
     "singleQuote": false,
     "semi": true
+  },
+  "engines": {
+    "node": "15.x"
   },
   "eslintConfig": {
     "root": true,
