--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "https-proxy-agent": "^5.0.0",
     "js-cookie": "^2.2.1",
     "jwks-rsa": "^2.0.2",
+    "jwt-decode": "^3.1.2",
     "morgan": "^1.10.0",
     "npm-run-all": "^4.1.5",
     "vue": "^2.6.12",
