--- a/package.json
+++ b/package.json
@@ -42,9 +42,10 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.1",
     "@vue/cli-plugin-eslint": "^3.12.1",
-    "@vue/cli-service": "^4.5.9",
+    "@vue/cli-service": "^3.12.1",
     "@vue/eslint-config-prettier": "^3.0.5",
     "babel-eslint": "^10.1.0",
+    "chokidar": "^3.5.1",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "sass-loader": "^7.3.1",
