--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "vuex": "^3.6.2",
     "vuex-persistedstate": "*",
     "watchpack-chokidar2": "^2.0.1",
-    "@vue/cli-service": "^3.12.1"
+    "@vue/cli-plugin-babel": "^3.12.1",
+    "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-service": "^3.12.1",
+    "@vue/eslint-config-prettier": "^3.0.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.1",
