--- a/package.json
+++ b/package.json
@@ -37,12 +37,7 @@
     "vue": "^2.6.12",
     "vue-router": "^3.4.9",
     "vuex": "^3.6.2",
-    "vuex-persistedstate": "*",
-    "watchpack-chokidar2": "^2.0.1",
-    "@vue/cli-plugin-babel": "^3.12.1",
-    "@vue/cli-plugin-eslint": "^3.12.1",
-    "@vue/cli-service": "^3.12.1",
-    "@vue/eslint-config-prettier": "^3.0.5"
+    "vuex-persistedstate": "*"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.1",
@@ -51,6 +46,7 @@
     "@vue/eslint-config-prettier": "^3.0.5",
     "babel-eslint": "^10.1.0",
     "chokidar": "^3.5.1",
+    "watchpack-chokidar2": "^2.0.1",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "sass-loader": "^7.3.1",
