--- a/auth_config.json
+++ b/auth_config.json
@@ -2,5 +2,5 @@
   "domain": "dev-2h53iakd.eu.auth0.com",
   "clientId": "E8oSHFMeu6VIljxMBLEXRK3cpHEXjChB",
   "audience": "http://localhost:3001/api/external",
-  "serverUrl": "http://localhost:4040"
+  "serverUrl": "https://pizz42.herokuapp.com/"
 }
