--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
+    "connect-history-api-fallback": "^1.6.0",
     "core-js": "^2.6.12",
     "cors": "^2.8.5",
     "dotenv-webpack": "^7.0.2",
