--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "npm-run-all --parallel serve api",
     "api": "nodemon --max_old_space_size=2560 server.js",
     "api_start": "node --max_old_space_size=2560 server.js",
-    "start": "npm-run-all --parallel serve api_start",
+    "vue_start": "node --max_old_space_size=2560 web-server.js",
+    "start": "npm-run-all --parallel vue_start api_start",
     "heroku-postbuild": "npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "dependencies": {
